--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="navitem-megamenu-container">
               <div class="megamenu-categories"></div>
               <div class="megamenu-items">
-                <div class="megamenu-columns"></div>
+                <div class=""></div>
               </div>
             </div>
           </div>
